# calculi

./: .env.template  Cargo.toml  Makefile  README.md
backend/: Cargo.toml  Makefile
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/core/: Cargo.toml
backend/core/src/: board.rs  game.rs
backend/migrations/: 1_setup.pgsql  1_setup.sql  2_user.pgsql  2_user.sql  3_calculi.pgsql  3_calculi.sql  4_calculi_players.pgsql  4_calculi_players.sql  5_calculi_move.pgsql  5_calculi_move.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: mod.rs  user.rs
backend/src/api/calculi/: board.rs  game.rs  mod.rs  player.rs
backend/src/api/types/: error.rs  extractor.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: router.ts
frontend/src/app/: Home.tsx
frontend/src/auth/: Login.tsx  Register.tsx
frontend/src/types/: NewUser.ts  User.ts
src/: board.rs  game.rs  main.rs  player.rs
