[package]
name = "calculi-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = "0.8.6"
anyhow = "1.0.102"
owo-colors = "4.3.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenv = "0.15.0"
