[package]
name = "calculi-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8.6", features = ["migrate", "postgres", "runtime-tokio", "uuid", "time"] }
anyhow = "1.0.102"
owo-colors = "4.3.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenv = "0.15.0"
tower = "0.5.3"
thiserror = "2.0.18"
env_logger = "0.11.10"
log = "0.4.29"
argon2 = "0.5.3"
rand = "0.10.1"
uuid = { version = "1.23.1", features = ["serde"] }
jwt = { version = "0.16.0", features = ["openssl"] }
sha2 = "0.10.9"
time = "0.3.47"
hmac = "0.12.1"
digest = "0.10.7"
